修复了日期不更新的问题，修复了一些潜在的BUG

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+
+    <string name="network_error">网没有网络连接，请连接网络后重试</string>
+
     <string name="app_name">干货日报</string>
     <string name="text_url">干货URL</string>
     <string name="text_desc">对干货内容的描叙</string>
